Pageserv: add linting (#16)
* Add prettier and eslint to pageserv

* Init eslint

* Remove linting errors

* Run prettier on pageserv

* Add lint steps to pageserv test action
